summer cleanup
Signed-off-by: chxei <chxei5667@gmail.com>